[package]
name = "jvt"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.46.1", features = ["full"] }

# Database connectivity  
tokio-postgres = "0.7.10"
postgres-types = "0.2.6"

# Vector tile generation
mvt = "0.10.3"
geozero = { version = "0.14.0", features = ["with-mvt"] }

# PMTiles archive management
pmtiles = "0.15.0"

# File system watching
notify = "6.1.1"

# Error handling
anyhow = "1.0.75"
thiserror = "1.0.50"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Configuration
config = "0.14.0"

# Utilities
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4"] }



